# jsonllm

./: .gitignore  README.md  pyproject.toml
catalog/: allowed-actions.json  intent-routes.json  policy-config.json
docs/: MODULE_COMPATIBILITY.md  MODULE_COOKBOOK.md
examples/: action-outcome-event.json  action-proposed-event.json  events.sample.jsonl  intent-accepted-event.json  intent-event.json
modules/core_builtin/: module.py  module.toml
modules/math_sum/: module.py  module.toml
src/: event_pipeline.py
src/jsonllm_kernel/: __init__.py  conformance.py  contracts.py  module_api.py  module_loader.py  project_init.py  scaffold.py
src/jsonllm_kernel/templates/modules/core_builtin/: module.toml
src/jsonllm_kernel/templates/modules/math_sum/: module.toml
